loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: not found: value estFacemur
while (!estFacemur) {avance()} 
        ^